debug: fix view memory action being obstructed by scrollbar

--- a/src/vs/workbench/contrib/debug/browser/media/debugViewlet.css
+++ b/src/vs/workbench/contrib/debug/browser/media/debugViewlet.css
@@ -129,7 +129,7 @@
 .debug-pane .monaco-list-row .monaco-action-bar {
 	display: none;
 	flex-shrink: 0;
-	margin-right: 1px;
+	margin-right: 6px;
 }
 
 .debug-pane .monaco-list-row:hover .monaco-action-bar,
